--- a/style.css
+++ b/style.css
@@ -105,3 +105,39 @@ a{
 .image-placeholder {
     color: white;
 }
+
+.mid-random {
+    display: flex;
+    padding-left: 200px;
+    padding-right: 200px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    justify-content: center;
+    font-size: 36px;
+    font-weight: 900;
+    color: #1f2937;
+}
+.mid-images-text {
+    display: flex;
+    justify-content: center;
+}
+
+.image-container {
+    display: flex;
+    flex-direction: column;
+    margin: 20px;
+}
+
+.mid-image,
+.mid-text {
+    height: 150px;
+    width: 150px;
+    
+    flex: 1, 1, auto;
+    border-radius: 12px;
+    }
+
+.mid-image {
+    border: 4px #3882f6 solid;
+    margin-bottom: 10px;
+}
